src/objects/HTML_Email_Status__c.object
<CustomObject>
    <description>Since the standard EmailStatus object is not queryable directly this is a substitution object for the &quot;Automate HTML Email Status Tracking&quot; solution by Doug Ayers, https://douglascayers.com</description>
    <fields>
        <fullName>Email_Template_Name__c</fullName>
        <description>Name of the email template used, if any.</description>
        <inlineHelpText>Name of the email template used, if any.</inlineHelpText>
        <label>Email Template Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Open_Date__c</fullName>
        <description>When the email was first opened.</description>
        <inlineHelpText>When the email was first opened.</inlineHelpText>
        <label>First Open Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Open_Date__c</fullName>
        <description>When the email was last opened.</description>
        <inlineHelpText>When the email was last opened.</inlineHelpText>
        <label>Last Open Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Sent_Date__c</fullName>
        <description>When the email was sent.</description>
        <inlineHelpText>When the email was sent.</inlineHelpText>
        <label>Sent Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Task_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Marked as External ID for upserting purposes. Should only exist at most one of these records per Task ID.</description>
        <externalId>true</externalId>
        <label>Task ID</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Times_Opened__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The number of times the email was opened.</description>
        <inlineHelpText>The number of times the email was opened.</inlineHelpText>
        <label>Times Opened</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Who_ID__c</fullName>
        <description>Who the email was sent to. Same as the Task.WhoId. Marked as External ID for indexing performance, not for upserting.</description>
        <externalId>true</externalId>
        <inlineHelpText>Who the email was sent to. Same as the Task.WhoId</inlineHelpText>
        <label>Who ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>HTML Email Status</label>
    <nameField>
        <displayFormat>EmailStatus-{000000}</displayFormat>
        <label>Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>HTML Email Statuses</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>